# coders24

./: package-lock.json  plan.md
backend/: .env  main.py  pyproject.toml  streamlit.py
backend/agents/: query_enhancer.py  query_responser.py  query_router.py
backend/app/: ingest.py  knowledge.py  pdf_parser.py
backend/app/api/endpoints/: ingest.py
backend/app/rag/: knowledge.py
backend/app/rag/parsers/: pdf_parser.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
