[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.16",
    "cohere>=5.20.1",
    "ddgs>=9.10.0",
    "fastapi>=0.125.0",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "openai>=2.14.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]
